sites/style.css
/* ... */
/*
#####################################################
#                                                   #
#                       Header                      #
#                                                   #
#####################################################
*/
header {
  background-color: #03196c;
  height: 150px;
  width: auto;
  padding: 40px 0 40px 150px;
  display: flex;
  z-index:-1;
}

header img {
  flex-direction: row;
  margin: 0px 25px 0px 85px;
}

header>nav {
  display: flex;
  width: 1300px;
  height: 70px;
  margin: 0;
  background-image: url("../images/Image_general/bannière.webp");
  flex-direction: row;
  justify-content: space-around;
  align-items: center;

}

header>nav a {
  width: 300px;
  height: 50px;
  border-radius: 20px;
  margin: 10px;
  color: #03196c;
  background-color: #d5c46c;
  font-size: 32px;
  text-decoration: none;
  text-align: center;
  display: inline-block;

}
header .burger{
  display:none;
}
header label li{
  position: relative;
  width: 12%;
  min-width: 120px;
  height: 6.5em;
  padding: 0.25em;
  border: solid 4px rgba(0, 0, 0, 0.285);
  background-color: #d5c46c;
  color: #03196c;

}
header label ul{
  list-style: none;
}
header input{
  appearance: none;
  position: relative;

}
header .planning{
  display: none;
  position: absolute;
  padding: 0;
  border: solid 4px rgba(0, 0, 0, 0.285);
  background-color: #d5c46c;
  color: #03196c;
}


/*
#####################################################
#                                                   #
#                       Body                        #
#                                                   #
#####################################################
*/
section {
  position: relative;
  display: flex;
  justify-content: space-between;
  margin: 2em;

}


article {
  background-color: #d5c46c;
  border: solid 10px #03196c;
  margin: 20px;
  border-radius: 20px;
  padding: 2em;
  z-index: 10;
}

.interaction {
  background-color: #d5c46c;
  border: solid 10px #03196c;
  margin: 20px;
  border-radius: 20px;
  padding: 2em;
  width: 60%;
  height: 10%;
  z-index: 10;
}

h2 {
  font-family: "Ubuntu";
  color: #03196c;
  /*bordure GAUCHE des titres*/
  border-left: #304aab solid 3px;
  border-left-width: 5px;
  width: 200px;
  height: 1.5em;

  /*bordure BAS des titres*/
  border-bottom: #304aab solid 3px;
  border-bottom-width: 5px;

  /*bordure DROITE et HAUT des titres*/
  border-top: 0;
  border-right: 0;

  padding-left: 10px;
  padding-bottom: 10px;
  margin-left: 0.5em;
}

section>.interaction>p,
section>.interaction>div>ul,
section>.interaction>table,
section>.interaction>div>p,
section>.interaction .carrousel {
  display: none;
}

main>div {
  display: flex;
  justify-content: space-between;
}

main>div>section article {
  width: 50%;
}

div h2 {
  display: block;
}

section>.interaction {
  transition: width 1.5s ease, height 1.5s ease;

}

section>.interaction h4 {
  float: right;
  margin-right: 12%;
  border-bottom: #304AAB solid;
  width: 20%;
}
section>.interaction div{
  display:flex;
  flex-direction:column;
  justify-content: space-around;
}
/*
#####################################################
#                                                   #
#                     Palmarès                      #
#                                                   #
#####################################################
*/
.palmares {
  justify-content: space-between;
  margin-left: 50px;
  margin-right: 80px;
}

section:nth-child(2) .interaction img {
  margin-top: 2em;
  margin-left: 2em;
  display: block;
}

section:nth-child(2)>article>h2 {
  display: block;
  float: right;
  font-family: "Ubuntu";
  color: #03196c;
  /*bordure GAUCHE des titres*/
  border-left: 0;
  width: auto;

  /*bordure BAS des titres*/
  border-bottom: #304aab solid 3px;
  border-bottom-width: 5px;

  /*bordure DROITE et HAUT des titres*/
  border-top: 0;
  border-right: #304aab solid 3px;
  border-right-width: 5px;
  text-align: right;
  padding-right: 10px;
  padding-bottom: 10px;

}

section:nth-child(2)>.interaction:nth-child(2) {
  display: flex;
  flex-direction: row-reverse;

}

section:nth-child(2) figure {
  justify-self: flex-start;
  margin-left: 5px;
}

section:nth-child(2) .interaction {
  height: 265px;
}

/*
#####################################################
#                                                   #
#                       Actus                       #
#                                                   #
#####################################################
*/

main>div section:nth-child(1) article {
  width: 700px;
  height: 163px;
}

.presentation img {
  padding-right: 2em;
}

.interaction:hover .carrousel {
  display: block;
  margin-top: 5%;
  margin-right: 20%;
}

main>div section:nth-child(1) .interaction:hover h2 {
  margin-bottom: 0;
}


/*
#####################################################
#                                                   #
#                     Réseaux                       #
#                                                   #
#####################################################
*/
main>div section:nth-child(2) article {
  width: 700px;
  height: 250px;
}

main div section:nth-child(2) article nav {
  margin-top: 6em;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-between;

}

main div section:nth-child(2) article nav figure {
  display: flex;
  flex-direction: column;
  align-items: center;
}

main div section:nth-child(2) article nav figcaption {
  width: 150px;
  text-align: center;
}


section:nth-child(4) img {
  display: block;
}

main>div section:nth-child(2) h2 {
  width: auto;
}
/* ... */

